examples/test/testpolicy11934.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11934
  namespace: namespace31
spec:
  podSelector:
    matchLabels:
      key35: value23
      key15: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value15
          key13: value34
      podSelector:
        matchLabels:
          key19: value36
          key37: value11
          key16: value9
